--- a/index.html
+++ b/index.html
@@ -1,41 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CocktailDB</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css">k
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CocktailDB</title>
+  <link rel="stylesheet" href="styles.css">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  
 </head>
-
 <body>
-    <!-- Navbar -->
-    <div>
-        <nav class="navbar fixed-top w-100 ">
-            <div class="container-fluid justify-content-center">
-                <a class="navbar-brand mx-auto text-white text-center" href="#">CocktailDB</a>
-            </div>
-        </nav>
+    <!-- navbar -->
+  <nav class="navbar fixed-top">
+    <div class="container justify-content-center">
+      <a class="navbar-brand mx-auto text-white" href="#">CocktailDB</a>
     </div>
+  </nav>
 
-    <!-- Input -->
-    <div class="container mt-5 pt-5 text-center">
-        <input id="searchInput" type="text" class="form-control form-control-lg"
-            placeholder="Search for your cocktail..">
-        <button type="button" class="btn btn-lg btn-outline-danger mt-4">Success</button>
+  <div class="container mt-5 pt-5">
+    <div class="row">
+      <!-- Cocktails  -->
+      <div id="cocktail-section" class="col-lg-8 col-md-8 col-sm-12">
+        <div class="input-group input-group-lg mb-4">
+          <input
+            id="searchInput"
+            type="text"
+            class="form-control"
+            placeholder="Search for your cocktail..."
+          />
+          <button id="searchBtn" class="btn btn-outline-danger" type="button">
+            Search
+          </button>
+        </div>
 
+        <h2 class="text-center mb-4">Cocktails</h2>
+        <div id="cocktail-container" class="row g-3">
+        </div>
+      </div>
+
+      <!-- Cart  -->
+      <div id="cart-section" class="col-lg-4 col-md-4 col-sm-12">
+        <h3 class="text-center mt-5">Your Cart</h3>
+        <div id="cart-main-container"
+          class="border p-3 bg-light rounded shadow-sm">
+        </div>
+        <hr />
+        <h5 class="text-center">
+          Total: $<span id="cart-total">0.00</span>
+        </h5>
+      </div>
     </div>
+  </div>
 
-    <div id="cocktail-container" class="cocktail-grid ">
-        
-        <hr>
-        <div id="cart-main-container" class="cart-main-container"></div>
-
+    <!-- modal -->
+  <div
+    class="modal fade"
+    id="drinkModal"
+    tabindex="-1"
+    aria-labelledby="drinkModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="drinkModalLabel">Drink Details</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="modal-body" id="drinkModalBody">
+        </div>
+      </div>
     </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="app.js"></script>
+
+
+  <script src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
