--- a/index.html
+++ b/index.html
@@ -1,87 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CocktailDB</title>
-  <link rel="stylesheet" href="styles.css">
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>CocktailDB App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
+
 <body>
     <!-- navbar -->
-  <nav class="navbar fixed-top">
-    <div class="container justify-content-center">
-      <a class="navbar-brand mx-auto text-white" href="#">CocktailDB</a>
-    </div>
-  </nav>
-
-  <div class="container mt-5 pt-5">
-    <div class="row">
-      <!-- Cocktails  -->
-      <div id="cocktail-section" class="col-lg-8 col-md-8 col-sm-12">
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+        <div class="container justify-content-center">
+            <a class="navbar-brand mx-auto text-white" href="#">CocktailDB</a>
+        </div>
+    </nav>
+    <!-- input -->
+    <div class="container mt-5 pt-5">
         <div class="input-group input-group-lg mb-4">
-          <input
-            id="searchInput"
-            type="text"
-            class="form-control"
-            placeholder="Search for your cocktail..."
-          />
-          <button id="searchBtn" class="btn btn-outline-danger" type="button">
-            Search
-          </button>
+            <input id="searchInput" type="text" class="form-control" placeholder="Search for your cocktail..." />
+            <button id="searchBtn" class="btn btn-outline-danger" type="button">Search</button>
         </div>
-
-        <h2 class="text-center mb-4">Cocktails</h2>
-        <div id="cocktail-container" class="row g-3">
+        <!-- All cocktails  -->
+        <div class="row">
+            <div class="col-md-8">
+                <h2 class="text-center mb-4">Cocktails</h2>
+                <div id="cocktail-container" class="d-flex flex-wrap justify-content-center gap-4"></div>
+            </div>
+            <!-- cart  -->
+            <div class="col-md-4">
+                <h3 class="text-center mb-3">Your Cart</h3>
+                <div id="alert-container"></div>
+                <div id="cart-main-container" class="border p-3 bg-light rounded shadow-sm" style="min-height:100px;">
+                </div>
+                <div id="total-container" class="mt-3 fs-5 fw-bold text-end"></div>
+            </div>
         </div>
-      </div>
-
-      <!-- Cart  -->
-      <div id="cart-section" class="col-lg-4 col-md-4 col-sm-12">
-        <h3 class="text-center mt-5">Your Cart</h3>
-        <div id="cart-main-container"
-          class="border p-3 bg-light rounded shadow-sm">
-        </div>
-        <hr />
-        <h5 class="text-center">
-          Total: $<span id="cart-total">0.00</span>
-        </h5>
-      </div>
     </div>
-  </div>
-
-    <!-- modal -->
-  <div
-    class="modal fade"
-    id="drinkModal"
-    tabindex="-1"
-    aria-labelledby="drinkModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="drinkModalLabel">Drink Details</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+    <!-- modal  -->
+    <div class="modal fade" id="drinkModal" tabindex="-1" aria-labelledby="drinkModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="drinkModalLabel">Drink Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body" id="drinkModalBody"></div>
+            </div>
         </div>
-        <div class="modal-body" id="drinkModalBody">
-        </div>
-      </div>
     </div>
-  </div>
 
-
-
-  <script src="app.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
